// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`StreakCalendar Snapshots should match snapshot with full week completed 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 16,
      "elevation": 2,
      "marginBottom": 24,
      "marginHorizontal": 16,
      "padding": 24,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.05,
      "shadowRadius": 4,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 16,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={24}
      bbWidth={24}
      fill="none"
      focusable={false}
      height={24}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#E8704D"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4293423181,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="M12 3q1 4 4 6.5t3 5.5a1 1 0 0 1-14 0 5 5 0 0 1 1-3 1 1 0 0 0 5 0c0-2-1.5-3-1.5-5q0-2 2.5-4"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4293423181,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      style={
        {
          "color": "#2B2B2B",
          "fontSize": 20,
          "fontWeight": "700",
          "marginLeft": 8,
        }
      }
    >
      7
       Day Streak!
    </Text>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 12,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        M
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#F5EFE3",
              "borderRadius": 18,
              "height": 36,
              "justifyContent": "center",
              "width": 36,
            },
            {
              "backgroundColor": "#5B8FA3",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "700",
            }
          }
        >
          ✓
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 12,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        T
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#F5EFE3",
              "borderRadius": 18,
              "height": 36,
              "justifyContent": "center",
              "width": 36,
            },
            {
              "backgroundColor": "#5B8FA3",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "700",
            }
          }
        >
          ✓
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 12,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        W
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#F5EFE3",
              "borderRadius": 18,
              "height": 36,
              "justifyContent": "center",
              "width": 36,
            },
            {
              "backgroundColor": "#5B8FA3",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "700",
            }
          }
        >
          ✓
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 12,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        T
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#F5EFE3",
              "borderRadius": 18,
              "height": 36,
              "justifyContent": "center",
              "width": 36,
            },
            {
              "backgroundColor": "#5B8FA3",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "700",
            }
          }
        >
          ✓
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 12,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        F
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#F5EFE3",
              "borderRadius": 18,
              "height": 36,
              "justifyContent": "center",
              "width": 36,
            },
            {
              "backgroundColor": "#5B8FA3",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "700",
            }
          }
        >
          ✓
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 12,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        S
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#F5EFE3",
              "borderRadius": 18,
              "height": 36,
              "justifyContent": "center",
              "width": 36,
            },
            {
              "backgroundColor": "#5B8FA3",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "700",
            }
          }
        >
          ✓
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 12,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        S
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#F5EFE3",
              "borderRadius": 18,
              "height": 36,
              "justifyContent": "center",
              "width": 36,
            },
            {
              "backgroundColor": "#5B8FA3",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "700",
            }
          }
        >
          ✓
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`StreakCalendar Snapshots should match snapshot with high streak number 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 16,
      "elevation": 2,
      "marginBottom": 24,
      "marginHorizontal": 16,
      "padding": 24,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.05,
      "shadowRadius": 4,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 16,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={24}
      bbWidth={24}
      fill="none"
      focusable={false}
      height={24}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#E8704D"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4293423181,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="M12 3q1 4 4 6.5t3 5.5a1 1 0 0 1-14 0 5 5 0 0 1 1-3 1 1 0 0 0 5 0c0-2-1.5-3-1.5-5q0-2 2.5-4"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4293423181,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      style={
        {
          "color": "#2B2B2B",
          "fontSize": 20,
          "fontWeight": "700",
          "marginLeft": 8,
        }
      }
    >
      100
       Day Streak!
    </Text>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 12,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        M
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#F5EFE3",
              "borderRadius": 18,
              "height": 36,
              "justifyContent": "center",
              "width": 36,
            },
            {
              "backgroundColor": "#5B8FA3",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "700",
            }
          }
        >
          ✓
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 12,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        T
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#F5EFE3",
              "borderRadius": 18,
              "height": 36,
              "justifyContent": "center",
              "width": 36,
            },
            {
              "backgroundColor": "#5B8FA3",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "700",
            }
          }
        >
          ✓
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 12,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        W
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#F5EFE3",
              "borderRadius": 18,
              "height": 36,
              "justifyContent": "center",
              "width": 36,
            },
            {
              "backgroundColor": "#5B8FA3",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "700",
            }
          }
        >
          ✓
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 12,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        T
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#F5EFE3",
              "borderRadius": 18,
              "height": 36,
              "justifyContent": "center",
              "width": 36,
            },
            {
              "backgroundColor": "#5B8FA3",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "700",
            }
          }
        >
          ✓
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 12,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        F
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#F5EFE3",
              "borderRadius": 18,
              "height": 36,
              "justifyContent": "center",
              "width": 36,
            },
            {
              "backgroundColor": "#5B8FA3",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "700",
            }
          }
        >
          ✓
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 12,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        S
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#F5EFE3",
              "borderRadius": 18,
              "height": 36,
              "justifyContent": "center",
              "width": 36,
            },
            {
              "backgroundColor": "#5B8FA3",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "700",
            }
          }
        >
          ✓
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 12,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        S
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#F5EFE3",
              "borderRadius": 18,
              "height": 36,
              "justifyContent": "center",
              "width": 36,
            },
            {
              "backgroundColor": "#5B8FA3",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "700",
            }
          }
        >
          ✓
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`StreakCalendar Snapshots should match snapshot with no progress 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 16,
      "elevation": 2,
      "marginBottom": 24,
      "marginHorizontal": 16,
      "padding": 24,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.05,
      "shadowRadius": 4,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 16,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={24}
      bbWidth={24}
      fill="none"
      focusable={false}
      height={24}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#E8704D"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4293423181,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="M12 3q1 4 4 6.5t3 5.5a1 1 0 0 1-14 0 5 5 0 0 1 1-3 1 1 0 0 0 5 0c0-2-1.5-3-1.5-5q0-2 2.5-4"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4293423181,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      style={
        {
          "color": "#2B2B2B",
          "fontSize": 20,
          "fontWeight": "700",
          "marginLeft": 8,
        }
      }
    >
      0
       Day Streak!
    </Text>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 12,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        M
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#F5EFE3",
              "borderRadius": 18,
              "height": 36,
              "justifyContent": "center",
              "width": 36,
            },
            false,
          ]
        }
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 12,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        T
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#F5EFE3",
              "borderRadius": 18,
              "height": 36,
              "justifyContent": "center",
              "width": 36,
            },
            false,
          ]
        }
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 12,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        W
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#F5EFE3",
              "borderRadius": 18,
              "height": 36,
              "justifyContent": "center",
              "width": 36,
            },
            false,
          ]
        }
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 12,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        T
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#F5EFE3",
              "borderRadius": 18,
              "height": 36,
              "justifyContent": "center",
              "width": 36,
            },
            false,
          ]
        }
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 12,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        F
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#F5EFE3",
              "borderRadius": 18,
              "height": 36,
              "justifyContent": "center",
              "width": 36,
            },
            false,
          ]
        }
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 12,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        S
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#F5EFE3",
              "borderRadius": 18,
              "height": 36,
              "justifyContent": "center",
              "width": 36,
            },
            false,
          ]
        }
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 12,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        S
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#F5EFE3",
              "borderRadius": 18,
              "height": 36,
              "justifyContent": "center",
              "width": 36,
            },
            false,
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`StreakCalendar Snapshots should match snapshot with partial progress 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 16,
      "elevation": 2,
      "marginBottom": 24,
      "marginHorizontal": 16,
      "padding": 24,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.05,
      "shadowRadius": 4,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 16,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={24}
      bbWidth={24}
      fill="none"
      focusable={false}
      height={24}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#E8704D"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4293423181,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="M12 3q1 4 4 6.5t3 5.5a1 1 0 0 1-14 0 5 5 0 0 1 1-3 1 1 0 0 0 5 0c0-2-1.5-3-1.5-5q0-2 2.5-4"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4293423181,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      style={
        {
          "color": "#2B2B2B",
          "fontSize": 20,
          "fontWeight": "700",
          "marginLeft": 8,
        }
      }
    >
      5
       Day Streak!
    </Text>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 12,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        M
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#F5EFE3",
              "borderRadius": 18,
              "height": 36,
              "justifyContent": "center",
              "width": 36,
            },
            {
              "backgroundColor": "#5B8FA3",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "700",
            }
          }
        >
          ✓
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 12,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        T
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#F5EFE3",
              "borderRadius": 18,
              "height": 36,
              "justifyContent": "center",
              "width": 36,
            },
            {
              "backgroundColor": "#5B8FA3",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "700",
            }
          }
        >
          ✓
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 12,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        W
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#F5EFE3",
              "borderRadius": 18,
              "height": 36,
              "justifyContent": "center",
              "width": 36,
            },
            false,
          ]
        }
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 12,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        T
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#F5EFE3",
              "borderRadius": 18,
              "height": 36,
              "justifyContent": "center",
              "width": 36,
            },
            false,
          ]
        }
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 12,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        F
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#F5EFE3",
              "borderRadius": 18,
              "height": 36,
              "justifyContent": "center",
              "width": 36,
            },
            false,
          ]
        }
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 12,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        S
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#F5EFE3",
              "borderRadius": 18,
              "height": 36,
              "justifyContent": "center",
              "width": 36,
            },
            false,
          ]
        }
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#6A6A6A",
            "fontSize": 12,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        S
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#F5EFE3",
              "borderRadius": 18,
              "height": 36,
              "justifyContent": "center",
              "width": 36,
            },
            false,
          ]
        }
      />
    </View>
  </View>
</View>
`;
